# optimization

./: .gitignore  .slurm-615099.out.swp  .slurm-615141.out.swp  D1_cma.py  D1_optimization.py  D1_optuna.py  README.md  ampl_freq_test.py  cma_main.py  cma_opt.py  cma_utils.py  init_simplex.py  init_symplex.py  main.py  opt_plot.py  opt_test.sh  optimization.py  optuna.sh  optuna_main.py  optuna_summary.csv  optuna_test.py  optunaopt_utils.py  plot_beta.ipynb  pyproject.toml  rb_init_simplex.py  rb_init_symplex.py  rb_optimization.py  rb_optuna.py  requirements.txt  scipyopt_main.py  scipyopt_utils.py  sequence.py  sequence.sh  sequence_test.py  slurm-565335.out  slurm-565617.out  slurm-565621.out  slurm-565976.out  slurm-565996.out  slurm-566005.out  (+17 more)
opt_analysis/: compatibility.ipynb
opt_analysis/D1_SLSQP_post_ft_true/: analysis.ipynb  final_plots.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_cma_post_ft_true/: analysis.ipynb  analysis.py  final_plots.ipynb  test.ipynb
opt_analysis/D1_cma_test/: analysis.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_init_simplex_20241110_211211/: final_plots.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_init_simplex_20241113_181711/: analysis.ipynb  final_plots.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_init_simplex_20241113_200745/: final_plots.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_nelder-mead/: analysis.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_nelder-mead_no_scale/: analysis.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_nelder-mead_post_ft/: analysis.ipynb  final_plots.ipynb  optimization_history.npz  optimization_result.pkl
opt_analysis/D1_nelder-mead_post_ft_true/: analysis.ipynb  final_plots.ipynb  optimization_history.npz  optimization_result.pkl  visualization.ipynb
opt_analysis_D1/: analysis.ipynb
optuna_analysis/: D1_20241109_114242.ipynb  D1_20241110_074214.ipynb  D1_20241118_151919.ipynb  D1_20241121_192626.ipynb  README.md
rb_opt/: meta.json
rb_opt3h/: meta.json
rb_opt3h_analysis/: plot_no_beta.ipynb
slurm_output/: slurm-569178.out  slurm-572242.out  slurm-584788.out  slurm-584811.out  slurm-584856.out  slurm-584865.out  slurm-614846.out  slurm-615099.out  slurm-615141.out  slurm-615321.out  slurm-615743.out  slurm-615770.out
test/: index.html  meta.json
test_rb/: meta.json
test_rb_dummy/: meta.json
test_rb_opt/: meta.json
test_rb_opt_1/: meta.json
(+812 files in other folders)
