[tool.poetry]
name = "optimization"
#version = "0.0.1"
description = ""
authors = ["ElStabilini <el.stabilini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cma = "^3.4.0"
matplotlib = {version = "^3.9.2", optional = true}
numpy = "^1.26.4"
optuna = "^4.0.0"
scipy = "^1.14.1"
plotly = "^5.24.1"
seaborn = { version = "^0.12.2", optional = true }
qibocal = {git = "https://github.com/qiboteam/qibocal.git", branch = "qua"} 
qibolab = "^0.1.9"
qm-qua = "^1.1.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter_client = "^8.6.3"
pre-commit = "^3.8.0"
debugpy = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
