[tool.poetry]
name = "optimization"
#version = "0.0.1"
description = ""
authors = ["ElStabilini <el.stabilini@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
cma = "^3.4.0"
matplotlib = "^3.9.2"
numpy = "^1.26.4"
optuna = "^4.0.0"
scipy = "^1.14.1"
plotly = "^5.24.1"
seaborn = "^0.12.2"
qibo = "0.2.6"
qibocal = {git = "https://github.com/qiboteam/qibocal.git", branch = "qua"} 
qibolab = {git = "https://github.com/qiboteam/qibolab.git", branch = "0.1"} 
qm-qua = "1.1.6"
mpld3 = "^0.5.10"
qualang-tools = "0.15.2"
qcodes = "^0.37.0"
pyvisa-py = "0.5.3"
qcodes-contrib-drivers = "^0.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter_client = "^8.6.3"
pre-commit = "^3.8.0"
debugpy = "^1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
